Add Generate Quiz
