# nextstep-backend/src/openapi/swagger.yaml
@@ -1116,7 +1116,7 @@ paths:
         '400':
           description: Bad Request
 
-  /quiz:
+  /quiz/raw:
     get:
       tags:
         - Quizzes
@@ -1140,6 +1140,33 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Quiz'
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+
+  /quiz/generate:
+    get:
+      tags:
+        - Quizzes
+      summary: Generate a quiz for a certain subject.
+      description: Generate a quiz for a certain subject. The quiz is generated based on our real-world quizzes database.
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: subject
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The subject of the quiz to be generated
+      responses:
+        '200':
+          description: A generated quiz custom-tailored for the targeted subject.
+          content:
+            application/json:
+              schema:
+                type: object # TODO:
         '401':
           description: Unauthorized
         '500':
